--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,9 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+
+<section class="register">
+    <h1>S'enregistrer</h1>
 
     {{ form_errors(registrationForm) }}
 
@@ -12,8 +14,11 @@
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
+
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn submit">S'enregistrer</button>
     {{ form_end(registrationForm) }}
+
+</section>
 {% endblock %}
