--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,44 @@
-body {
-    background-color: skyblue;
+* {
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
+body {        
+    height: 100vh;
+    background: linear-gradient(to bottom right, #5D388D 49%, #273EB4 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    text-align: center;
+}
+
+.icon {
+    color:#5D388D;
+}
+
+/* Général sécurity */
+.infosPwd {
+    font-size: 0.7em;
+}
+
+
+/* Buttons */
+.submit {
+    width:100%;
+    padding: 2%;
+    border-radius: 10px;
+    background-color: #5D388D;
+    margin-top: 5%;
+}
+
+/* Inputs */
+.inputLarge {
+    width: 100%;
+    padding: 2%;
+    margin-top: 5%;
 }
