--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,16 +14,29 @@
             </div>
         {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="username">Email</label>
-        <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
-        <label for="password">Password</label>
-        <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
+        <section class="login">
+            <h1 class="h3 mb-3 font-weight-normal">Se connecter</h1>
+            {# <label for="username">Email</label> #}
+            <p>
+                <input class="inputLarge" type="email" value="{{ last_username }}" name="_username" id="username" placeholder="Votre email" class="form-control" autocomplete="email" required autofocus>
+            </p>
+            {# <label for="password">Password</label> #}
+            <p>
+                <input class="inputLarge" type="password" name="_password" id="password" placeholder="Mot de passe" class="form-control" autocomplete="current-password" required>
+                {# <p class="iconEye"><i class="icon fa-solid fa-eye-slash"></i></p> #}
+                <p class="infosPwd">Votre mot de passe doit contenir 12 caractères dont 1 majuscule, 1 chiffre et 1 caractère spécial</p>
+            </p>
 
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('authenticate') }}"
-        >
+            <input type="hidden" name="_csrf_token"
+                value="{{ csrf_token('authenticate') }}"
+            >
+            <button class="btn btn-lg btn-primary submit" type="submit">
+                        Connexion
+                    </button>
+        </section>
+    </form>
 
+        
         {#
             Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
             See https://symfony.com/doc/current/security/remember_me.html
@@ -34,8 +47,5 @@
             </div>
         #}
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
-        </button>
-    </form>
+        
 {% endblock %}
