--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -19,18 +19,19 @@
             <h1 class="h3 mb-3 font-weight-normal">Se connecter</h1>
             {# <label for="username">Email</label> #}
             <p>
+                <label for="username">Nom d'utilisateur :</label>
                 <input class="inputLarge form-control" type="email" value="{{ last_username }}" name="_username" id="username" placeholder="Votre email" autocomplete="email" required autofocus>
             </p>
             {# <label for="password">Password</label> #}
             <p>
-                <input class="inputLarge form-control" type="password" name="_password" id="password" placeholder="Mot de passe"autocomplete="current-password" required>
+                <label for="password">Mot de passe :</label>
+                <input class="inputLarge form-control" type="password" name="_password" id="password" placeholder="Mot de passe" autocomplete="current-password" required>
                 {# <p class="iconEye"><i class="icon fa-solid fa-eye-slash"></i></p> #}
                 <p class="infosPwd">Votre mot de passe doit contenir 12 caractères dont 1 majuscule, 1 chiffre et 1 caractère spécial</p>
             </p>
 
             <input type="hidden" name="_csrf_token"
-                value="{{ csrf_token('authenticate') }}"
-            >
+                value="{{ csrf_token('authenticate') }}">
 
             <button class="btn btn-lg btn-primary submit" type="submit">
                         Connexion
