--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -16,10 +16,10 @@
 body {        
     height: 100vh;
     background: var(--backColor);
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 
 h1 {
@@ -37,11 +37,12 @@ h1 {
 
 /* Navbar */
 #navbar {
-    position:fixed; 
-    top:0;
+    /* position:fixed;  */
+    /* top:0; */
     width: 100%;
     background-color: var(--backSection);
     padding: 1% 5%;
+    margin-bottom: 5%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -99,8 +100,8 @@ a {
 /* Bloc titres */
 
 section {
-    width: 90%;
-    padding-bottom: 3%;
+    width: 100%;
+    padding: 0 5% 3% 5%;
 }
 
 .titre {
