profil intern ok

--- a/templates/intern/addIntern.html.twig
+++ b/templates/intern/addIntern.html.twig
@@ -19,6 +19,21 @@
             {{ form_row(formIntern.firstname) }}
         </div>
 
+        <div>
+            {{ form_row(formIntern.dateBirth) }}
+            {{ form_row(formIntern.city) }}
+            {{ form_row(formIntern.sex) }}
+            
+        </div>
+
+        <div>
+            {{ form_row(formIntern.phone) }}
+            {{ form_row(formIntern.email) }}
+        </div>
+
+        <div>
+            {# {{ form_row(formIntern.submit) }} #}
+        </div>
 
        {{ form_end(formIntern)}}
 
