--- a/templates/intern/index.html.twig
+++ b/templates/intern/index.html.twig
@@ -15,21 +15,18 @@
             {# for inversé ds symfony #}
              {% for intern in interns %} 
                 <a href=" {{ path('app_profilIntern', {'id':intern.id}) }}">
-                    {{ intern.nameIntern }}
-                    {{ intern.firstname }}
+                    <p>{{ intern.nameIntern }} {{ intern.firstname }}</p>
                 </a>
+                <a href="{{ path('app_editIntern') }}"><i class="fa-solid fa-pencil"></i></a>
 
-                {{ intern.dateBirthFr }}
+                
             {% endfor %}
 
 
-            <a href="{{ path('app_editIntern') }}"><i class="fa-solid fa-pencil"></i></a>
+            
         </div>
 
-        <div class="infosIntern">Infos du stagiaire
-            <a href="{{ path('app_deleteIntern') }}"><i class="fa-solid fa-trash"></i></a>
-        </div>
-
+        
     </div>
 </section>
 
