--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -19,6 +19,13 @@
         <p class="thSession"></p>
         <p class="thSession"></p>
         
+        {% for session in sessions %}
+            {{ session.libelleSession }}
+            {{ session.dateBeginFr }}
+            {{ session.dateEndFr }}
+            {# {{ session.trainer }} #}
+        
+            {% endfor %}
 
         <a href="{{ path('app_editSession') }}"><i class="fa-solid fa-pencil"></i></a>
         <a href="{{ path('app_deleteSession') }}"><i class="fa-solid fa-trash"></i></a>
