--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -17,18 +17,20 @@
         <p class="thSession">Fin</p>
         <p class="thSession">Formateur</p>        
         <p class="thSession"></p>
-        <p class="thSession"></p>
         
         {% for session in sessions %}
-            {{ session.libelleSession }}
-            {{ session.dateBeginFr }}
-            {{ session.dateEndFr }}
-            {# {{ session.trainer }} #}
+            <p><a href="{{ path('app_detailSession', {'id':session.id}) }}">{{ session.libelleSession }}</a></p>
+            <p>{{ session.dateBeginFr }}</p>
+            <p>{{ session.dateEndFr }}</p>
+            
+            <p>{{ session.trainer.nameTrainer }} {{session.trainer.firstname }}</p>
         
-            {% endfor %}
 
-        <a href="{{ path('app_editSession') }}"><i class="fa-solid fa-pencil"></i></a>
-        <a href="{{ path('app_deleteSession') }}"><i class="fa-solid fa-trash"></i></a>
+            <p>
+                <a href="{{ path('app_editSession') }}"><i class="fa-solid fa-pencil"></i></a>
+                <a href="{{ path('app_deleteSession') }}"><i class="fa-solid fa-trash"></i></a>
+            </p>
+        {% endfor %}
     </div>
 
     
