detail de la session complete

--- a/templates/session/detailSession.html.twig
+++ b/templates/session/detailSession.html.twig
@@ -22,6 +22,9 @@
 
         {% for program in session.programs %} 
              <p>{{ program.module }} </p>
+             <p>{{ program.nbDay }} </p>
+              <p>{{ program.module.category }} </p> 
+
         {% endfor %} 
 
         
