--- a/templates/intern/index.html.twig
+++ b/templates/intern/index.html.twig
@@ -7,7 +7,7 @@
 <section>
     <div class="titre">
         <h3 >Liste des stagiaires </h3>
-        <a href="{{ path('app_addIntern') }}"><i class="fa-solid fa-plus"></i></a>
+        <a href="{{ path('add_intern') }}"><i class="fa-solid fa-plus"></i></a>
     </div>
 
     <div class="blocIntern">
@@ -17,7 +17,7 @@
              <p><a href=" {{ path('app_profilIntern', {'id':intern.id}) }}">
                     {{ intern.nameIntern }} {{ intern.firstname }}
                 </a></p>
-                <a href="{{ path('app_editIntern') }}"><i class="fa-solid fa-pencil"></i></a>
+                <a href="{{ path('edit_intern', {'id':intern.id }) }}"><i class="fa-solid fa-pencil"></i></a>
 
                 
             {% endfor %}
