--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -27,7 +27,7 @@
         
 
             <p>
-                <a href="{{ path('app_editSession') }}"><i class="fa-solid fa-pencil"></i></a>
+                {# <a href="{{ path('app_editSession') }}"><i class="fa-solid fa-pencil"></i></a> #}
                 <a href="{{ path('app_deleteSession') }}"><i class="fa-solid fa-trash"></i></a>
             </p>
         {% endfor %}
