--- a/templates/trainer/newTrainer.html.twig
+++ b/templates/trainer/newTrainer.html.twig
@@ -7,7 +7,11 @@
 
 <section>
     <div class="titre">
-        <h3 >Ajouter un formateur</h3>
+        {% if edit %}
+            <h3 >Modifier un stagiaire </h3>
+        {% else %}
+            <h3 >Ajouter un formateur </h3>
+        {% endif %}
         <a href="{{ path('app_trainer') }}"><i class="fa-solid fa-rotate-left"></i></a>
     </div>
 
