--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -7,7 +7,7 @@
 <section>
     <div class="titre">
         <h3 >Liste des catégories</h3>
-        <a href="{{ path('app_addCat') }}"><i class="fa-solid fa-plus"></i></a>
+        <a href="{{ path('add_cat') }}"><i class="fa-solid fa-plus"></i></a>
     </div>
 
     <div class="listCat"> 
@@ -15,7 +15,7 @@
         {% for category in categories %}
             <div><p> 
                 <a href="{{ path('app_detailCat', {'id':category.id}) }}">{{ category.  libelleCategory }}</a></p>
-                <a href="{{ path('app_editCat') }}"><i class="fa-solid fa-pencil"></i></a>
+                <a href="{{ path('edit_cat', {'id':category.id}) }}"><i class="fa-solid fa-pencil"></i></a>
                 <a href="{{ path('app_deleteCat') }}"><i class="fa-solid fa-trash"></i></a>
             </div>
         {% endfor %}
