--- a/templates/module/newModule.html.twig
+++ b/templates/module/newModule.html.twig
@@ -7,7 +7,11 @@
 
 <section>
     <div class="titre">
-        <h3 >Ajouter un module</h3>
+        {% if edit %}
+            <h3 >Modifier un module </h3>
+        {% else %}
+            <h3 >Ajouter un module</h3>
+        {% endif %}
         <a href="{{ path('app_module') }}"><i class="fa-solid fa-rotate-left"></i></a>
     </div>
 
