form edit formation ok

--- a/templates/training/index.html.twig
+++ b/templates/training/index.html.twig
@@ -7,7 +7,7 @@
 <section>
     <div class="titre">
         <h3 >Formations en cours</h3>
-        <a href="{{ path('app_addTraining') }}"><i class="fa-solid fa-plus"></i></a>
+        <a href="{{ path('add_training') }}"><i class="fa-solid fa-plus"></i></a>
     </div>
 
     <div class="listTraining"> 
@@ -16,7 +16,7 @@
             <p> <a href="{{ path('app_detailTraining', {'id':training.id}) }}">{{ training.libelleTraining}}</a></p>
 
         
-            <a href="{{ path('app_editTraining') }}"><i class="fa-solid fa-pencil"></i></a>
+            <a href="{{ path('edit_training', {'id':training.id}) }}"><i class="fa-solid fa-pencil"></i></a>
             <a href="{{ path('app_deleteTraining') }}"><i class="fa-solid fa-trash"></i></a>
         
         {% endfor %}
