function delete category ok

--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -16,7 +16,7 @@
             <div><p> 
                 <a href="{{ path('app_detailCat', {'id':category.id}) }}">{{ category.  libelleCategory }}</a></p>
                 <a href="{{ path('edit_cat', {'id':category.id}) }}"><i class="fa-solid fa-pencil"></i></a>
-                <a href="{{ path('app_deleteCat') }}"><i class="fa-solid fa-trash"></i></a>
+                <a href="{{ path('app_deleteCat', {'id':category.id}) }}"><i class="fa-solid fa-trash"></i></a>
             </div>
         {% endfor %}
         
