delete session ok

--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -28,7 +28,7 @@
 
             <p>
                 {# <a href="{{ path('app_editSession') }}"><i class="fa-solid fa-pencil"></i></a> #}
-                <a href="{{ path('app_deleteSession') }}"><i class="fa-solid fa-trash"></i></a>
+                <a href="{{ path('app_deleteSession', {'id':session.id}) }}"><i class="fa-solid fa-trash"></i></a>
             </p>
         {% endfor %}
     </div>
