--- a/templates/session/detailSession.html.twig
+++ b/templates/session/detailSession.html.twig
@@ -26,7 +26,7 @@
         {% endfor %} 
 
         
-        <h4>Stagiaires</h4>
+        <h4>Stagiaires inscrits</h4>
         {% for session in session.interns %}
             <p>
                 <a href="{{ path('app_intern') }}">{{ session.nameIntern }} {{ session.firstname }}</a>
@@ -34,8 +34,14 @@
             </p>
         {% endfor %}
 
-        <div class="listingSession">
-           
+        <div class="#">
+            <h4>Stagiaires non inscrits</h4>
+             {% for noRegisteredIntern in noRegistered %}
+                <p>
+                    <a href="{{ path('app_intern') }}">{{ noRegisteredIntern.nameIntern }} {{ noRegisteredIntern.firstname }}</a>
+                    <a href="{{ path('removeInternToSession', {'sessionId':session.id, 'internId':intern.id}) }}"><i class="fa-solid fa-plus"></i></a>
+                </p>
+            {% endfor %} 
            
         </div>
         
