--- a/assets/styles/session.css
+++ b/assets/styles/session.css
@@ -4,6 +4,11 @@
     border-radius: 10px;
 }
 
+.subTitleSession {
+    padding: 4% 0;
+}
+
+/* Sessions en cours */
 .listSession {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -16,4 +21,26 @@
 .listingSession {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+}
+
+/* Détail d'une session */
+
+.blockSession {
+    width: 100%;
+}
+
+.blockPlanning {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.planning {
+    width: 80%;
+}
+
+.listModuleSession {
+    display: grid;
+    grid-template-columns: repeat(4, 0.4fr);
+    grid-template-rows: auto;
 }
